--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@ body{
 
 }
 .apresentacao{
-    margin: 8% 15%;
+    margin: 5% 15%;
     display:flex;
     align-items: center;
     justify-content: space-between;
@@ -133,5 +133,10 @@ font-weight: 400;
 
     .apresentacao{
         flex-direction: column-reverse;
+        padding: 5%;
+    }
+
+    .apresentacao__conteudo{
+        width: auto;
     }
 }
